; ModuleID = '/home/carl/AnghaBench/linux/drivers/md/extr_dm-thin.c_need_commit_due_to_time.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/md/extr_dm-thin.c_need_commit_due_to_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pool = type { i64 }

@jiffies = common dso_local global i32 0, align 4
@COMMIT_PERIOD = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pool*)* @need_commit_due_to_time to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @need_commit_due_to_time(%struct.pool* %0) #0 {
  %2 = alloca %struct.pool*, align 8
  store %struct.pool* %0, %struct.pool** %2, align 8
  %3 = load i32, i32* @jiffies, align 4
  %4 = load %struct.pool*, %struct.pool** %2, align 8
  %5 = getelementptr inbounds %struct.pool, %struct.pool* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load %struct.pool*, %struct.pool** %2, align 8
  %8 = getelementptr inbounds %struct.pool, %struct.pool* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = load i64, i64* @COMMIT_PERIOD, align 8
  %11 = add nsw i64 %9, %10
  %12 = call i32 @time_in_range(i32 %3, i64 %6, i64 %11)
  %13 = icmp ne i32 %12, 0
  %14 = xor i1 %13, true
  %15 = zext i1 %14 to i32
  ret i32 %15
}

declare dso_local i32 @time_in_range(i32, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
